Fixed stretched cards

--- a/src/components/collection/Collection.css
+++ b/src/components/collection/Collection.css
@@ -93,6 +93,7 @@
 
 .collection-card-is-chosen {
   filter: grayscale(50%);
+  align-self: flex-start;
   opacity: 50%;
 }
 
